2010-11-10  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  term_type static variable and TERM_TYPE macro are removed
	  and main_config.term_type is used instead.

	* doc/en/PROTOCOL, man/mlterm.1, doc/ja/README.ja:
	  Explanation about "bidi_mode" is added.
	
	* ml_bidi.[ch], ml_line.[ch], ml_logical_visual.[ch], ml_term.[ch],
	  ml_term_manager.[ch], x_main_config.[ch], x_screen.c, x_term_manager.c:
	  "bidi_mode" option is added.

	* x_font.c: get_xft_col_width() is rewritten.

2010-10-27  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - If backscroll mode is BSM_STATIC, GtkAdjustnemt::value
	    is not changed when line is scrolled out.
	  - gtk_widget_queue_resize_no_redraw() is added to vte_terminal_size_allocate()
	    because gnome-terminal(2.29.6) isn't resized correctly without it.
	  - Following functions are implemented.
	    vte_terminal_select_all
	    vte_terminal_select_none
	    vte_terminal_set_color_cursor
	    vte_terminal_get_emulation
	    vte_terminal_get_default_emulation
	    vte_terminal_get_window_title
	    vte_terminal_get_icon_title

	* gtk/INSTALL: Unsupported vte api functions, signals and property
	  are enumerated.

	* x_imagelib.c: Checking if *file_path is '\0' or not is added to
	  x_imagelib_load_file_for_background() because following
	  strncmp( "" , "pixmap:" , 0) can return 0.

2010-10-22  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - VteTerminal doesn't catch x_system_event_listener_t::pty_closed
	    but ml_pty_event_listener_t::pty_closed event.
	  - vte_terminal_set_background_saturation() is implemented.
	  - Minor fixes.

	* x_imagelib.c: GdkPixbuf which load_file() returns is copyed before
	  modify_image.
	
	* ml_term.c: ml_term_zombie() is added.
	
	* ml_term_manager.c: ml_term_manager_enable_zombie_pty() is added.

2010-10-15  Araki Ken  <arakiken@users.sf.net>

	* x_font.c: x_font_use_point_size() is added.

	* vte.c:
	  - configure_toplevel() is added to process ConfigureNotify event